Fix Bug 308706 - kmail reset selection of massages when extract a

grouping

FIXED-IN: 4.10
BUG: 308706