messagelist/core/view.cpp
@@ -2198,7 +2198,6 @@ void View::mousePressEvent( QMouseEvent * e )
           }
         break;
         case Qt::RightButton:
-          clearSelection(); // make sure it's true, so it's clear that the eventual popup belongs to the group header
           d->mWidget->viewGroupHeaderContextPopupRequest( groupHeaderItem, viewport()->mapToGlobal( e->pos() ) );
         break;
         default:
@@ -2740,6 +2739,19 @@ void View::themeMenuAboutToShow(KMenu *menu)
 {
   d->mWidget->themeMenuAboutToShow(menu);
 }
+
+void View::setCollapseItem(const QModelIndex& index)
+{
+    if(index.isValid())
+      setExpanded( index, false );
+}
+
+void View::setExpandItem(const QModelIndex& index)
+{
+    if(index.isValid())
+      setExpanded( index, true );
+}
+
 
 
 #include "view.moc"
