messagelist/widget.cpp
@@ -73,6 +73,7 @@ public:
 
   int mLastSelectedMessage;
   KXMLGUIClient *mXmlGuiClient;
+  QModelIndex mGroupHeaderItemIndex;
 
 };
 
@@ -321,16 +322,16 @@ void Widget::viewGroupHeaderContextPopupRequest( MessageList::Core::GroupHeaderI
   QAction *act;
 
   QModelIndex index = view()->model()->index( ghi, 0 );
-  view()->setCurrentIndex(index);
+  d->mGroupHeaderItemIndex = index;
 
   if ( view()->isExpanded( index ) ) {
     act = menu.addAction( i18n ( "Collapse Group" ) );
     connect( act, SIGNAL(triggered(bool)),
-             view(), SLOT(slotCollapseCurrentItem()) );
+             this, SLOT(slotCollapseItem()) );
   } else {
     act = menu.addAction( i18n ( "Expand Group" ) );
     connect( act, SIGNAL(triggered(bool)),
-             view(), SLOT(slotExpandCurrentItem()) );
+             this, SLOT(slotExpandItem()) );
   }
   
   menu.addSeparator();
@@ -693,6 +694,16 @@ Akonadi::Collection Widget::currentCollection() const
   if ( collections.size()!=1 )
     return Akonadi::Collection(); // no folder here or too many (in case we can't decide where the drop will end)
   return collections.first();
+}
+
+void Widget::slotCollapseItem()
+{
+  view()->setCollapseItem(d->mGroupHeaderItemIndex);
+}
+
+void Widget::slotExpandItem()
+{
+  view()->setExpandItem(d->mGroupHeaderItemIndex);
 }
 
 #include "widget.moc"
